--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/script.js"></script>
+    <h1>test</h1>
 </body>
 </html>
