--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TripCase</title>
     <script src="https://kit.fontawesome.com/ade5c7beee.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,700;0,800;1,600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,700;0,800;1,600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.9/dist/css/uikit.min.css" />
     <link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <body>
     <header>
         <h1 id="title">TripCase</h1>
@@ -16,7 +20,8 @@
         <div class="uk-width-1-1" id="searchRow">
             <div class="uk-align-center" id="searchEntry">
                 <input type="text" id="searchField" name="searchField" placeholder="Search for a City">
-                <button type="button" class="uk-button uk-button-default uk-button-small" id="searchBtn"><span class="fas fa-search"></span></button><br>
+                <button type="button" class="uk-button uk-button-default uk-button-small" id="searchBtn"><span
+                        class="fas fa-search"></span></button><br>
             </div>
         </div>
     </header>
@@ -25,12 +30,26 @@
 
     <div id="contentArea" uk-grid>
         <div class="uk-width-1-4 uk-grid-small" id="leftSidebar">
-                <div id="cityList">
-                    City Listing goes here
-                </div>
+            <div id="cityList">
+                City Listing goes here
+            </div>
         </div>
         <div class="uk-width-expand uk-grid-small" id="mainContent">
             Main Content Area
+
+
+            <!-- FEMA Cards -->
+            <h3 class="femaContainer">FEMA</h3>
+
+                
+                <div class="city1 uk-card uk-card-small uk-card-default">
+                    <ul>
+                        <li class='1'> </li>
+                        <li class='2'> </li>
+                        <li class='3'> </li>
+                    </ul>
+                </div>
+
         </div>
     </div>
 
@@ -43,4 +62,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/script.js"></script>
 </body>
+
 </html>
