--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
     <div id="contentArea" uk-grid>
         <div class="uk-width-1-4 uk-grid-small" id="leftSidebar">
-                <div id="cityList">
-                    City Listing goes here
-                </div>
+            <div id="cityList"></div>
         </div>
         <div class="uk-width-expand uk-grid-small" id="mainContent">
             Main Content Area
